<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:onClick="onClickNextAct"
    tools:context=".SOneSecond_Activity"
    tools:ignore="TextSizeCheck">

    <TextView
        android:id="@+id/text5"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/text1"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text5"
        android:textAlignment="center"
        android:textColor="#0560FA"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="272dp"
        android:layout_height="47dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/text2"
        android:fontFamily="@font/roboto"
        android:text="@string/text6"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text5"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_skip_style"
        android:backgroundTint="#0560FA"
        android:onClick="onClickNextAct"
        android:text="@string/btnsignup"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="4.69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thirdimg" />

    <TextView
        android:id="@+id/text30"
        android:layout_width="186dp"
        android:layout_height="17dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/text7"
        android:fontFamily="@font/roboto"
        android:text="@string/text7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInBtnTV"
        android:layout_width="48dp"
        android:layout_height="20dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/roboto"
        android:onClick="onClickLogIn"
        android:text="Log In"
        android:textColor="#0560F9"
        app:layout_constraintBaseline_toBaselineOf="@+id/text30"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>